[package]
name = "stock-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
anyhow = "1"
chrono = "0.4"
directories = "6.0.0"
